Footer Is Updated

--- a/index.html
+++ b/index.html
@@ -279,10 +279,75 @@
       </div>
      </div>
     </div>
-
-    <div class="footer-social">
-      
+    <!-- about zomato and Social Medias -->
+    <div class="zomato-footer-bottom1">
+      <div class="zomato-footer-bottomContent">
+        <h4>ABOUT ZOMATO</h4>
+        <p>who we are</p>
+        <p>blog</p>
+        <p>work with us</p>
+        <p>Investor Relations</p>
+        <p>Report Fraud</p>
+        <p>Contact Us</p>
+      </div>
+      <div class="zomato-footer-bottomContent">
+        <h4>ZOMAVERSE</h4>
+        <p>Zomato</p>
+        <p>Blinkit</p>
+        <p>Feeding India</p>
+        <p>HyperPure</p>
+        <p>Zomaland</p>
+      </div>
+      <div class="zomato-footer-bottomContent">
+        <h4>FOR RESTAURANTS</h4>
+        <p>Partner with Us</p>
+        <p>Apps For You</p>
+        <h4>For Enterprises</h4>
+        <p>Zomato for Work</p>
+      </div>
+      <div class="zomato-footer-bottomContent">
+        <h4>LEARN MORE</h4>
+        <p>Privacy</p>
+        <p>Security</p>
+        <p>Terms</p>
+        <p>Sitemap</p>
+      </div>
+      <div class="zomato-footer-bottomContent">
+        <h4>SOCIAL LINKS</h4>
+        <div class="zomato-links">
+          <span class="zomato-icon">
+            <i class="fa-brands fa-linkedin-in"></i>
+          </span>
+          <span class="zomato-icon">
+            <i class="fa-brands fa-twitter"></i>
+          </span>
+          <span class="zomato-icon">
+            <i class="fa-brands fa-instagram"></i>
+          </span>
+          <span class="zomato-icon">
+            <i class="fa-brands fa-youtube"></i>
+          </span>
+          <span class="zomato-icon">
+            <i class="fa-brands fa-facebook"></i>
+          </span>
+        </div>
+        <img src="./assets//appstorelogo.jpg" id="img-ply"
+          alt="App Store" />
+        <img src="./assets/playstorelogo.jpg" id="img-ply"
+          alt="Google Play" />
+      </div>
     </div>
+ <hr>
+    <div class="zomato-footer-bottom">
+      <p>
+        By continuing past this page, you agree to our Terms of Service, Cookie Policy,
+        Privacy Policy and Content Policies. All trademarks are properties of their respective
+        owners. 2008-2022 © Zomato™ Ltd. All rights reserved.
+      </p>
+
+    </div>
+  </div>
+
   </div>
 </footer>
 </body>
